--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,10 @@ spring.jpa.properties.hibernate.format_sql=true
 
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://133.186.244.96:3306/nhn_academy_6?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://133.186.244.96:3306/nhn_academy_7?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8
 
-spring.datasource.username=nhn_academy_6
-spring.datasource.password=p63Amk!F0Mgvrd3&
+spring.datasource.username=nhn_academy_7
+spring.datasource.password=YtN@9E2BXmq1#$SD
 
 
+server.port=9800
